--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -17,8 +17,7 @@
    "id": "fa554f44",
    "metadata": {},
    "source": [
-    "## Preparation\n",
-    "* (will delete) Define and prepare your class variables. Use proper variable representations (int, float, one-hot, etc.). Use pre-processing methods (as needed) for dimensionality reduction, scaling, etc. Remove variables that are not needed/useful for the analysis. Describe the final dataset that is used for classification/regression (include a description of any newly formed variables you created). You have the option of using tf.dataset for processing, but it is not required. \n"
+    "### Preparation\n"
    ]
   },
   {
@@ -841,14 +840,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f87ded9",
-   "metadata": {},
-   "source": [
-    "* (will delete) Identify groups of features in your data that should be combined into cross-product features. Provide a compelling justification for why these features should be crossed (or why some features should not be crossed)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bfbad198",
    "metadata": {},
    "source": [
@@ -865,26 +856,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9983dd7",
-   "metadata": {},
-   "source": [
-    "* (will delete) Choose and explain what metric(s) you will use to evaluate your algorithm’s performance. You should give a detailed argument for why this (these) metric(s) are appropriate on your data. That is, why is the metric appropriate for the task (e.g., in terms of the business case for the task). Please note: rarely is accuracy the best evaluation metric to use. Think deeply about an appropriate measure of performance."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2cb5b553",
    "metadata": {},
    "source": [
     "For this classification, we used recall to evaluate the metric. Recall measures the proportion of actual positive cases (people with diabetes) that the model correctly identifies. We believe this metric is the best for our dataset because false negatives (cases where a person has diabetes but the model predicts they do not) are the most serious outcome, and it has real-world consequences. Failing to detect diabetes in a patient could result in delayed treatement, undiagnosed complications, and long-term damage to a patient's health, or even more serious outcomes. It is more critical to minimize false negatives than false positives because even though a false positive may lead to further testing or inconvenience, a false negative could mean a missed opportunity to intervene. Optimizing for recall ensures that we are prioritizing the correct identification of individuals who are at risk and may need medical attention, even if it means accepting a slightly higher rate of false positives. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b5fe8d3",
-   "metadata": {},
-   "source": [
-    "* (will delete) Choose the method you will use for dividing your data into training and testing (i.e., are you using Stratified 10-fold cross validation? Shuffle splits? Why?). Explain why your chosen method is appropriate or use more than one method as appropriate. Argue why your cross validation method is a realistic mirroring of how an algorithm would be used in practice. Use the method to split your data that you argue for. "
    ]
   },
   {
@@ -921,9 +896,7 @@
    "id": "ac678ac0",
    "metadata": {},
    "source": [
-    "## Modeling \n",
-    "* (will delete) Create at least three combined wide and deep networks to classify your data using Keras (this total of \"three\" includes the model you will train in the next step of the rubric). Visualize the performance of the network on the training data and validation data in the same plot versus the training iterations.\n",
-    "    * Note: you can use the \"history\" return parameter that is part of Keras \"fit\" function to easily access this data.\n",
+    "### Modeling \n",
     "\n"
    ]
   },
@@ -3272,14 +3245,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8b775885",
-   "metadata": {},
-   "source": [
-    "* (will delete) Investigate generalization performance by altering the number of layers in the deep branch of the network. Try at least two models (this \"two\" includes the wide and deep model trained from the previous step). Use the method of cross validation and evaluation metric that you argued for at the beginning of the lab to answer: What model with what number of layers performs superiorly? Use proper statistical methods to compare the performance of different models."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "63d68dc6",
@@ -3378,14 +3343,6 @@
    "metadata": {},
    "source": [
     "An evaluation of the wide and deep models with varying depths was conducted to assess the impact of network complexity on predictive performance. The 2-layer model resulted in a mean squared error of 0.0981 ± 0.0007, while the 4-layer model achieved a slightly lower MSE of 0.0979 ± 0.0006. Although the 4-layer configuration demonstrated marginally better average performance, the difference was minimal. To determine whether the observed difference was statistically significant, a paired t-test was performed using results from 5-fold cross-validation. The test yielded a t-statistic of 1.3771 and a p-value of 0.2405. Since the p-value exceeds the 0.05 significance threshold, the difference in performance between the two models is not statistically significant. These results indicate that increasing the number of deep layers from two to four does not provide a meaningful improvement in model accuracy. Both models exhibit comparable generalization performance on the dataset."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d03e55b1",
-   "metadata": {},
-   "source": [
-    "* (will delete) Compare the performance of your best wide and deep network to a standard multi-layer perceptron (MLP). Alternatively, you can compare to a network without the wide branch (i.e., just the deep network). For classification tasks, compare using the receiver operating characteristic and area under the curve. For regression tasks, use Bland-Altman plots and residual variance calculations.  Use proper statistical methods to compare the performance of different models.  "
    ]
   },
   {
@@ -3640,7 +3597,7 @@
    "id": "4dc7aa17",
    "metadata": {},
    "source": [
-    "## Exceptional Work"
+    "### Exceptional Work"
    ]
   },
   {
@@ -3648,7 +3605,7 @@
    "id": "f413ca26",
    "metadata": {},
    "source": [
-    "### Deep Only Network vs Wide & Deep Network vs MLP (Standard Multi-Layer Perceptron)"
+    "#### Deep Only Network vs Wide & Deep Network vs MLP (Standard Multi-Layer Perceptron)"
    ]
   },
   {
@@ -4463,12 +4420,6 @@
     "\n",
     "Additionally, when examining the confusion matrices, we can see that the Deep Only model correctly identifies more true negatives (43092 versus 42993 for Wide & Deep) with similar numbers of false positives, though it does have slightly fewer false negatives (858 versus 911) compared to the Wide & Deep model. We've established earlier in the lab that false negatives are considered more harmful, so the Deep Only model shows a slight better performance in this critical metric. Considering the class imbalance in the dataset (43667 samples of class 0 versus 7069 samples of class 1), the Deep Only model demonstrates better precision for the minority class (0.60 versus 0.57) while maintaining comparable overall performance. Given its simpler architecture and nearly identical AUC score, the Deep Only model appears to be the optimal choice for this classification problem in comparison to the Wide & Deep Model and MLP."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4544bed",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -4487,7 +4438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
